fix issue 768 viewport overflow

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,10 @@ $pswp__assets-path: "~photoswipe/src/css/default-skin/";
 
 @import "highlight";
 
+body, html {
+  overflow-x: hidden;
+}
+
 a {
     text-decoration: none
 }
